--- a/Application/Application.html
+++ b/Application/Application.html
@@ -216,12 +216,12 @@ div.tocify {
 
 <h1 class="title toc-ignore">Use of a calibration model for count data to predict cancer incidence in areas without cancer registry</h1>
 <h3 class="subtitle"><em>Prediction of cancer incidence using cancer registry and hospitalization data</em></h3>
-<h4 class="date"><em>28 novembre, 2017</em></h4>
+<h4 class="date"><em>08 février, 2018</em></h4>
 
 </div>
 
 
-<p>In this document, we illustrate the main features of the <code>CalibInc</code> R package through the example of estimating LOP cancer incidence in men for the 96 French metropolitan districts over the 2007-2011 period. The predictions are made using registry incidence data from 14 districts and hospitalization data for all the districts. This exemple served as an illustration of the method in the article <em>“For a sound use of big data in epidemiology: evaluation of a calibration model for count data with application to prediction of cancer incidence in areas without cancer registry”</em>.</p>
+<p>In this document, we illustrate the main features of the <code>CalibInc</code> R package through the example of estimating LOP cancer incidence in men for the 96 French metropolitan districts over the 2007-2011 period. The predictions are made using registry incidence data from 14 districts and hospitalization data for all the districts. This exemple served as an illustration of the method in the article <em>“For a sound use of healthcare data in epidemiology: evaluation of a calibration model for count data with application to prediction of cancer incidence in areas without cancer registry”</em>.</p>
 <blockquote>
 <p><strong>WARNING</strong></p>
 <p><em>In order to comply with diffusion constrains,</em> <em>the numbers of cancer and hospitalizations in the datasets</em> <em>were slightly altered, while keeping the same value and district</em> <em>variability of the H/C ratio, as in the real data.</em></p>
